--- a/.project
+++ b/.project
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<projectDescription>
-	<name>granjavilla</name>
-	<comment></comment>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><projectDescription>
+	<name>2020s2-granjavilla-lgassman</name>
+	<comment/>
 	<projects>
 	</projects>
 	<buildSpec>
